Add maven environment